# avataa-graphs

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  ruff.toml  supervisord.conf
app/: config.py  init_app.py  main.py  updater_main.py  v1.py
app/routers/: analysis.py  building.py  initialisation.py  search.py  tmo.py  tmp.py  trace.py
app/routers/helpers/: try_catch_task_exception.py
app/services/: auth.py  graph.py  instances.py  inventory.py
app/services/security/: security_data_models.py  security_factory.py  security_interface.py
app/task/: analysis_helpers.py  analysis_tasks.py  building_tasks.py  busy_parameters_task.py  commutation_tprms_task.py  edges_between_nodes_task.py  find_nodes_by_mo_id.py  find_trace_nodes_by_mo_id.py  find_way_between_a_b.py  initialisation_tasks.py  on_start.py  search_tasks.py  show_as_table_task.py  task_abstract.py  tmo_tasks.py  tmp_get_mo_info_task.py  trace_levels_task.py  trace_tasks.py  tracking_task.py
app/task/building_helpers/: add_breadcrumbs.py  add_indexed_field_to_nodes.py  build_from_tmo.py  build_links_from_tmo.py  connect_service_by_lines.py  connect_service_by_lines_update.py  (+12 more)
app/updater/: kafka_listener.py  main.py  updater_config.py
tests/: README.md  conftest.py  test_config.py  test_requirements.txt
tests/test_analysis/: test_analysis.py
tests/test_build/: test_build.py
tests/test_initialisation/: test_initialisation.py
tests/test_search/: test_search.py
tests/test_tmo/: test_tmo.py
tests/test_trace/: test_trace.py
tests/test_update/: conftest.py  mocks.py
(+78 files in other folders)
